@@ -17,7 +17,6 @@ import org.bukkit.entity.ItemFrame;
 import org.bukkit.event.HandlerList;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
@@ -25,7 +24,7 @@ import java.util.Map;
  * @deprecated Plugin no longer exists externally
  * Manages FurnitureEngine integration for creating, removing, and interacting with furniture.
  */
-public final class FurnitureEngine extends EntityDataManager {
+public class FurnitureEngine extends EntityDataManager {
 
     private final Graves plugin;
     private final FurnitureInteractListener furnitureInteractListener;
@@ -33,7 +32,6 @@ public final class FurnitureEngine extends EntityDataManager {
 
     /**
      * @deprecated Plugin no longer exists externally
-     *
      * Constructs a FurnitureEngine instance.
      *
      * @param plugin The main plugin instance.
@@ -75,7 +73,6 @@ public final class FurnitureEngine extends EntityDataManager {
 
     /**
      * @deprecated Plugin no longer exists externally
-     *
      * Creates and places furniture at the specified location.
      *
      * @param location The location where the furniture should be placed.
@@ -100,7 +97,6 @@ public final class FurnitureEngine extends EntityDataManager {
 
     /**
      * @deprecated Plugin no longer exists externally
-     *
      * Removes furniture associated with the specified grave.
      *
      * @param grave The grave for which to remove furniture.
@@ -117,19 +113,17 @@ public final class FurnitureEngine extends EntityDataManager {
 
     /**
      * @deprecated Plugin no longer exists externally
-     *
      * Removes specific furniture entity data.
      *
      * @param entityData The entity data of the furniture to remove.
      */
     @Deprecated
     public void removeFurniture(EntityData entityData) {
-        removeFurniture(getEntityDataMap(Collections.singletonList(entityData)));
+        removeFurniture(getEntityDataMap(List.of(entityData)));
     }
 
     /**
      * @deprecated Plugin no longer exists externally
-     *
      * Removes multiple pieces of furniture based on a map of entity data to entities.
      *
      * @param entityDataMap A map of entity data to entities to remove.
@@ -147,7 +141,6 @@ public final class FurnitureEngine extends EntityDataManager {
 
     /**
      * @deprecated Plugin no longer exists externally
-     *
      * Retrieves the ItemFrame at a specified location.
      *
      * @param location The location to search for the ItemFrame.
@@ -158,8 +151,8 @@ public final class FurnitureEngine extends EntityDataManager {
         location = location.clone().add(0.0D, 1.0D, 0.0D);
         if (location.getWorld() != null) {
             for (Entity entity : location.getWorld().getNearbyEntities(location, 0.13D, 0.2D, 0.13D)) {
-                if (entity instanceof ItemFrame) {
-                    return (ItemFrame) entity;
+                if (entity instanceof ItemFrame itemFrame) {
+                    return itemFrame;
                 }
             }
         }
@@ -168,7 +161,6 @@ public final class FurnitureEngine extends EntityDataManager {
 
     /**
      * @deprecated Plugin no longer exists externally
-     *
      * Cleans up ItemFrames near the death location of a grave.
      *
      * @param grave The grave to clean up.
@@ -178,8 +170,8 @@ public final class FurnitureEngine extends EntityDataManager {
         Location location = grave.getLocationDeath();
         if (location.getWorld() != null) {
             for (Entity entity : location.getWorld().getNearbyEntities(location, 0.70, 1.0D, 0.7D)) {
-                if (entity instanceof ItemFrame) {
-                    entity.remove();
+                if (entity instanceof ItemFrame itemFrame) {
+                    itemFrame.remove();
                 }
             }
         }
@@ -215,5 +207,46 @@ public final class FurnitureEngine extends EntityDataManager {
             plugin.warningMessage("Furniture breaking failed at:" + location.getWorld().getName()
                     + ", x" + location.getBlockX() + ", y" + location.getBlockY() + ", z" + location.getBlockZ());
         }
+    }
+
+    /**
+     * @deprecated Plugin no longer exists externally
+     * True if FurnitureEngine furniture exists at the grave's location.
+     *
+     * @param grave The grave to check.
+     * @return True if furniture is present at or near the grave location.
+     */
+    @Deprecated
+    public boolean hasFurniture(Grave grave) {
+        if (grave == null) return false;
+
+        Location loc = grave.getLocationDeath();
+        if (loc == null || loc.getWorld() == null) loc = grave.getLocationDeath();
+        if (loc == null || loc.getWorld() == null) return false;
+
+        try {
+            if (FurnitureManager.getInstance().isFurniture(loc) != null) return true;
+
+            Location up = loc.clone().add(0.0D, 1.0D, 0.0D);
+            if (FurnitureManager.getInstance().isFurniture(up) != null) return true;
+
+            Map<EntityData, Entity> map = getEntityDataMap(getLoadedEntityDataList(grave));
+            for (Map.Entry<EntityData, Entity> e : map.entrySet()) {
+                EntityData data = e.getKey();
+                Entity ent = e.getValue();
+                if (data == null || ent == null) continue;
+                if (data.getType() != EntityData.Type.FURNITUREENGINE) continue;
+                if (!ent.isValid() || ent.isDead()) continue;
+
+                Location el = ent.getLocation();
+                if (el.getWorld() != null && el.getWorld().equals(loc.getWorld())
+                        && el.distanceSquared(up) <= 0.25D) {
+                    return true;
+                }
+            }
+        } catch (Throwable ignored) {
+        }
+
+        return false;
     }
 }
