@@ -27,7 +27,6 @@ import java.io.InputStream;
 import java.nio.file.Files;
 import java.nio.file.StandardCopyOption;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
@@ -129,7 +128,6 @@ public class Nexo extends EntityDataManager {
         }
     }
 
-
     /**
      * Creates and places Nexo furniture at a specified location.
      *
@@ -177,7 +175,7 @@ public class Nexo extends EntityDataManager {
      * @param entityData The entity data of the furniture to be removed.
      */
     public void removeFurniture(EntityData entityData) {
-        removeFurniture(getEntityDataMap(Collections.singletonList(entityData)));
+        removeFurniture(getEntityDataMap(List.of(entityData)));
     }
 
     /**
@@ -239,9 +237,7 @@ public class Nexo extends EntityDataManager {
      */
     @SuppressWarnings("deprecation")
     public boolean isCustomBlock(Location location) {
-        if (location.getBlock().getBlockData() instanceof NoteBlock) {
-            NoteBlock noteBlock = (NoteBlock) location.getBlock().getBlockData();
-
+        if (location.getBlock().getBlockData() instanceof NoteBlock noteBlock) {
             int id = (int) (noteBlock.getInstrument().getType()) * 25
                     + (int) noteBlock.getNote().getId()
                     + (noteBlock.isPowered() ? 400 : 0)
@@ -256,7 +252,7 @@ public class Nexo extends EntityDataManager {
 
         return false;
     }
-    
+
     /**
      * Retrieves a FurnitureMechanic by name from the Nexo plugin.
      *
@@ -270,14 +266,44 @@ public class Nexo extends EntityDataManager {
     }
 
     /**
-     * Retrieves a NoteBlockMechanic by name from the Nexo plugin.
+     * True if a Nexo furniture entity for this grave is currently spawned.
      *
-     * @param string The name of the note block mechanic.
-     * @return The NoteBlockMechanic if found, otherwise null.
+     * @param grave The grave to check.
+     * @return True if at least one valid Nexo furniture entity mapped to this grave exists.
      */
-    public NoteBlockMechanic getNoteBlockMechanic(String string) {
-        MechanicFactory mechanicFactory = MechanicsManager.INSTANCE.getMechanicFactory("noteblock");
+    public boolean hasFurniture(Grave grave) {
+        if (grave == null) return false;
 
-        return mechanicFactory != null ? (NoteBlockMechanic) mechanicFactory.getMechanic(string) : null;
+        Map<EntityData, Entity> map = getEntityDataMap(getLoadedEntityDataList(grave));
+        if (map.isEmpty()) return false;
+
+        for (Map.Entry<EntityData, Entity> e : map.entrySet()) {
+            EntityData data = e.getKey();
+            Entity ent = e.getValue();
+            if (data == null || ent == null) continue;
+
+            if (data.getType() == EntityData.Type.NEXO && ent.isValid() && !ent.isDead()) {
+                return true;
+            }
+        }
+        return false;
+    }
+
+    /**
+     * True if a Nexo custom block exists at the grave location.
+     *
+     * @param grave The grave to check.
+     * @return True if a custom Nexo block is present where the grave is placed.
+     */
+    public boolean hasBlock(Grave grave) {
+        if (grave == null) return false;
+
+        Location loc = grave.getLocationDeath();
+        if (loc == null || loc.getWorld() == null) {
+            loc = grave.getLocationDeath();
+        }
+        if (loc == null || loc.getWorld() == null) return false;
+
+        return isCustomBlock(loc);
     }
 }
